Fix Bandcamp embed clipping issues

--- a/src/index.css
+++ b/src/index.css
@@ -348,21 +348,23 @@
 
 .bandcamp-embed {
   width: 100%;
-  max-width: 400px;
-  margin: 1em 0;
+  margin: 1.5em 0;
 }
 
 .bandcamp-embed iframe {
   width: 100%;
-  height: 350px;
+  height: 400px;
   border: 0;
   display: block;
 }
 
-@media (max-width: 480px) {
-  .bandcamp-embed {
-    max-width: 100%;
+@media (max-width: 600px) {
+  .bandcamp-embed iframe {
+    height: 340px;
   }
+}
+
+@media (max-width: 400px) {
   .bandcamp-embed iframe {
     height: 300px;
   }
